--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
  .container {
     width: 100%;
     max-width: 960px;
-    margin: 0 auto;
+    margin: 0 none;
     clear: both;
 }
 
@@ -96,7 +96,7 @@ nav a:first-child {
 .main-section {
     background: #fff;
     padding: 30px;
-    margin: 0 0 40px 0;
+    margin: 0 0 40px 40px;
     width: 100%;
     max-width: 650px;
     float: left;
