--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,8 @@ nav a:first-child {
     float: right;
     border: 1px solid #ddd;
     margin-bottom: 20px;
+    margin-right: 20px;
+
 }
 
 h3, .sidebar, h2 {
