--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,20 @@
     box-sizing: border-box;
 }
 
+
+header {
+   
+
+}
+
 body {
-    background: url('../images/concrete_seamless.png');
-    font-size: 18px;
-    line-height: 34px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777;
+      background:url(https://user-images.githubusercontent.com/35813855/40282583-d4c23794-5c2e-11e8-9e81-e3a22a703d6d.jpg) ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* font-size: 18px; */
+    /* line-height: 34px; */
+    /* font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; */
+    /* color: #777; */
 }
 
  .container {
@@ -181,7 +189,7 @@ footer {
     position: absolute;
     bottom: 20px;
     padding: 15px;
-    width: 100%
+    width: 100%;
     line-height: 30px;
     margin-bottom: 0;
     font-weight: 300;
